projet2_kubernetes/my-service-projet2.yml
kind: Service
apiVersion: v1
metadata:
  name: my-projet2-kuber-service
  labels:
    app: my-projet2-kuber
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: my-projet2-kuber
