projet2_kubernetes/my-ingress-projet2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-projet2-kuber-ingress
spec:
  defaultBackend:
    service:
      name: my-projet2-kuber-service
      port:
        number: 8000
